Fix for hero section opacity not covering the whole hero section

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -1,4 +1,5 @@
 #hero {
+  position: relative;
   background-image: url($baseurl + "/assets/images/backgrounds/hero.jpg");
   background-position: 8% 0;
   background-repeat: no-repeat;
@@ -180,6 +181,7 @@
     }
 
     &__opacity {
+      position: absolute;
       width: 100%;
       height: 100%;
       background: rgb(231,231,231, 0.7);
